--- a/README
+++ b/README
@@ -1,10 +1,10 @@
-textgrid.py, v. 0.1
+textgrid.py
 
-Python classes for Praat TextGrid and TextTier files, and HTK MLF files
+Python classes for Praat TextGrid and TextTier files (and HTK .mlf files)
 
+Max Bane <bane@uchicago.edu>
 Kyle Gorman <kgorman@ling.upenn.edu>
 Morgan Sonderegger <morgan@cs.uchicago.edu>
-Max Bane <bane@uchicago.edu>
 
 HOW TO CITE:
 
@@ -20,14 +20,4 @@ imported in your Python script.
 
 SYNOPSIS:
 
-See the in-line documentation.
-
-HISTORY:
-
-KG designed this for personal use in 2007, circulated it in 2008, and turned 
-the original methods into Python classes in 2009. MS and MB began fixing bugs 
-and contributing functions for particular use cases in 2011. 
-
-TODO:
-
-Version 1.0 will come out when it is done.
+See the docstrings in textgrid.py
