Fixes: IntervalTier and PointTier reading had a bug; RWtests.py didn't run through, now it does. Changes: Instead of the previous, confusing syntax for whether a IntervalTier, PointTier, or TextGrid was to be read in from a file or made, I introduced subclasses called IntervalTierFromFile, etc. If an IntervalTier is made by hand, it is initialized with a single string argument for its name. If it is read from a text file, the name string is a second, optional keyword arg and the first argument is the obligatory file argument (string or file object).

--- a/TODO
+++ b/TODO
@@ -1,5 +1,4 @@
-5/30/11 (KG):
+7/2/11 (KG):
 
-* module level docstring is needed
-* for read functions, replace string hacking with valid regexps where possible
-* need doctests for all read/write method pairs (also test with Praat). i'm currently building this in RWtests.py
+* consider the merits of using regexps, or some equivalent of fscanf, instead 
+  of split() for parsing text files in the write methods.
