I added UTF-16 reading support to all the appropriate read() methods. This doesn't apply to MLF instances since HTK doesn't support anything but ASCII. I also couldn't see any way around disabling Max's elegant way to allow the user to pass either file objects or a path to a file, sadly; it's probably not safe to assume that any given file object can handle seek(0), for instance. The changes to the write() methods are not yet done and going to be more complex: is being non-ASCII an attribute of an interval/point, an IntervalTier/PointTier, or is it determined at write time?

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
-7/2/11 (KG):
+10/16/11 (KG, MS):
 
+* fix for implicit intervals at write() time
 * consider the merits of using regexps, or some equivalent of fscanf, instead 
   of split() for parsing text files in the write methods.
