"Isinstance considered harmful." Python is supposed to kinda be duck-typed. Isinstance was used in a number of places for comparing intervals to points and vis versa (in which case we now look for "time" or "minTime"/"maxTime" attributes) and for file objects (in which case we now look for "write" attributes). All tests pass (etc.) - KG

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 11/16/11 (KG, MS):
 
-#: UTF-8 and UTF-16 reading
-#: UTF-8 and UTF-16 writing
+UTF-8 and UTF-16 reading
+UTF-8 and UTF-16 writing
+MLF.read should treat non-null small pauses as words (probably)
